<resources>
    <string name="app_name">AntPlay Design</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="login_with_otp">Login with OTP</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signup">Sign Up</string>
    <string name="letsGo">Let’s Go</string>
    <string name="firstname">First Name</string>
    <string name="name">Name</string>
    <string name="lastname">Last Name</string>
    <string name="phone">Phone Number</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">Select State</string>
    <string name="pinCode">Pin Code</string>
    <string name="age">Age</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="resetPass">Reset Password</string>
    <string name="termsAndC"><u>Terms and Conditions</u></string>
    <string name="forgotPass"><u>Forgot Password?</u></string>
    <string name="signupHere"><u>Sign up here</u></string>
    <string name="emailOrMobile">E-mail or Mobile Number</string>
    <string name="termsCondition">I agree with the terms of </string>
    <string name="user_agreements">user agreement</string>
    <string name="alreadyRegister"><u>Already have an account? Sign in here.</u></string>
    <string name="error_email">Email is required</string>
    <string name="error_firstname">First Name is required</string>
    <string name="remove_whitespace">Remove White Space</string>
    <string name="error_lastname">Last Name is required</string>
    <string name="error_pinCode">PinCode is required</string>
    <string name="error_phone">Phone Number is required</string>
    <string name="error_address">Address is required</string>
    <string name="error_state">State is required</string>
    <string name="error_city">City is required</string>
    <string name="error_confirmPass">Confirm Password is required</string>
    <string name="error_age">Age is required</string>
    <string name="error_password_not_match">Password do not match</string>
    <string name="error_username">Username is required</string>
    <string name="error_password">Password is required</string>
    <string name="error_old_password">Enter Old Password</string>
    <string name="error_new_password">Enter New Password</string>
    <string name="error_confirm_password">Enter Confirm Password</string>
    <string name="error_checkbox">Please check the checkbox</string>
    <string name="error_invalidEmail">Invalid email address</string>
    <string name="error_invalidPhone">Invalid phone number</string>
    <string name="error_pass_minimum">Password must be minimum 8 characters</string>
    <string name="pass_regex">Password Should contains 1 upper letter,1 small letter, 1 special character,1 number</string>
    <string name="error_Confirmpass_minimum">Confirm Password must be minimum 8 characters</string>
    <string name="choose_new_pc">CHOOSE A NEW PC</string>
    <string name="next_in_queue">You are next in queue </string>
    <string name="speed_test">Speed test</string>
    <string name="back">Back</string>
    <string name="mbTS">MB|T/S</string>
    <string name="discord">Discord</string>
    <string name="instagram">Instagram</string>
    <string name="website">AntPlay.Tech</string>
    <string name="change_pass">Change password</string>
    <string name="upadte_pass">Update password</string>
    <string name="update_profile">Update</string>
    <string name="user_agreement">User agreement</string>
    <string name="logout">Log out</string>
    <string name="delete_your_pc">Delete Virtual PC</string>
    <string name="your_data_saved">Your data will be saved for</string>
    <string name="current_virtual_pc">Current virtual PC</string>
    <string name="manage_subscription">Manage Subscription</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="success_register">Successfully Register</string>
    <string name="old_pass">Old Password</string>
    <string name="new_pass">New Password</string>
    <string name="payment_history">Payment History</string>
    <string name="about">About Us</string>
    <string name="version">Version</string>
    <string name="version_name">1.0</string>
    <string name="edit">Edit</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="transactionId">Transaction Id</string>
    <string name="planName">Plan Name</string>
    <string name="status">Status</string>
    <string name="Amount">Amount</string>
    <string name="facebook_app_id">735046784449617</string>
    <string name="fb_login_protocol_scheme">735046784449617</string>
    <string name="facebook_client_token">d30479f89d96d8fdafb7c72cb26cfbe3</string>
    <string name="verify_phone_number">Verify Phone Number</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="continue_phone">Continue</string>
    <string name="you_will_receive_otp">You will receive 6 digit OTP to verify your phone number</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="computer_not_available">You have no computers available right now</string>
    <string name="computer_available">Computers available right now</string>
    <string name="reload"><u>Reload</u></string>
    <string name="computer">Computers</string>
    <string name="connect_computer">Connect to your computer in low latency desktop mode.</string>
    <string name="agreement">A non-disclosure agreement, also known as a confidentiality agreement, details what information should not be shared outside of the parties in the agreement. It may cover information or materials (such as photos) that cannot be shared with third parties</string>
    <string name="play_pc_game">Play PC games on your smartphone</string>
    <string name="by_using_smartphone">by using screen control</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="connect_a_gamepad">Connect a gamepad for the game convenience</string>
    <string name="more_professional">and more professional and precise control</string>
    <string name="run_remote_pc">Run remote PC</string>
    <string name="from_smart_phone">and run it from your smartphone</string>
    <string name="download_pc_game">Download your favorites PC games</string>
    <string name="any_source">from any source in the internet</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="is_first_time">IS_FIRST_TIME</string>
    <string name="control_tips">Home screen control tips</string>
    <string name="tips">Tips</string>
    <string name="stream_quality">Stream Quality</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="extraHigh">Extra high</string>
    <string name="fps">FPS</string>
    <string name="fps_text">We advise you to choose 60 FPS only with reliable Internet, and then you risk missing a fatal headshot due to lag</string>
    <string name="fps_30">30</string>
    <string name="fps_60">60</string>
    <string name="stream_quality_text">Very high quality requires fast internet and a lot of traffic. if you often hang up the game - it is better to reduce the quality for while</string>
    <string name="touch_screen_mode">Touch Screen Mode</string>
    <string name="trackpad">Trackpad</string>
    <string name="single_tap">Single tap</string>
    <string name="invert">Invert the left stick by Y</string>
    <string name="gamepad">Gamepad Mapping</string>
    <string name="reset">Reset</string>
    <string name="row_data">Show Raw Data</string>
    <string name="input">Input</string>
    <string name="state_gamepad">State</string>
    <string name="minmax">Min/Max</string>
    <string name="raw">Raw</string>
    <string name="action">Actions</string>
    <string name="two_hours">2</string>
    <string name="eight_hours">8</string>
    <string name="twentyFour_hours">24</string>
    <string name="additional_time">Additional Time</string>
    <string name="purchase_2_hours">Purchase 2 hours</string>
    <string name="purchase_8_hours">Purchase 8 hours</string>
    <string name="purchase_24_hours">Purchase 24 hours</string>
    <string name="rupees">₹</string>
    <string name="arcade">Arcade</string>
    <string name="arcade_message">Explore, host, and share games with everyone around the world.</string>
    <string name="join">Join</string>
    <string name="question1">What is Ant Play?</string>
    <string name="question2">What purpose can I use Ant Play for?</string>
    <string name="question3">Will I be able to use Ant Play right after purchasing the plan?</string>
    <string name="question4">On what types of devices is Ant Play available?</string>
    <string name="answer1">Steven Rogers was born in the Lower East Side of Manhattan, New York City, in 1925 to poor Irish immigrants, Sarah and Joseph Rogers.[54] Joseph died when Steve was a child, and Sarah died of pneumonia while Steve was a teen. By early 1940, before Americas entry into World War II, Rogers is a tall, scrawny fine arts student specializing in illustration and a comic book writer and artist.</string>
    <string name="title_activity_payment_plan">PaymentPlanActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="subscribe">Subscribe</string>
    <string name="active_plan">Active Plan</string>
    <string name="payment_hours">\" Hours\"</string>
    <string name="subscription_plan">Subscription Plan</string>
    <string name="are_you_sure">Are you sure, you want to logout ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="nick_name">Nick Name</string>
    <string name="ip_address">IP Address</string>
    <string name="port">Port</string>
    <string name="ipAddress">10.250.50.100</string>
    <string name="portaddress">5900</string>
    <string name="usernames">Antplay-Pc</string>
    <string name="passwords">vms@rakesh</string>
    <string name="address_caption">Address</string>
    <string name="alt_check">Alt</string>
    <string name="arrow_down">Down Arrow</string>
    <string name="arrow_left">Left Arrow</string>
    <string name="arrow_right">Right Arrow</string>
    <string name="arrow_up">Up Arrow</string>
    <string name="auto">Auto</string>
    <string name="button_send_text">Send Text</string>
    <string name="button_send_without_saving">Send Text/Don\'t Save It</string>
    <string name="center_mouse">Mouse @</string>
    <string name="close">Close</string>
    <string name="color_format_caption">Color Format</string>
    <string name="color_mode">Color Mode</string>
    <string name="connect_button">Connect</string>
    <string name="connection_caption">Connection</string>
    <string name="control_check">Ctrl</string>
    <string name="copy_list_button">Copy List</string>
    <string name="ctrl_alt_del">Ctrl-Alt-Del</string>
    <string name="delete_connection">Delete Connection</string>
    <string name="delete_key">Delete Selected Key</string>
    <string name="delete_key_list">Delete Key List</string>
</resources>