<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginwithlogo"
    tools:context=".activity.RegisterActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearBottom"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="1dp"
            android:background="@drawable/btnshape"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:fontFamily="sans-serif"
            android:textColorHint="@color/gray"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/btnshape"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="15dp"
            android:fontFamily="sans-serif"
            android:textColorHint="@color/gray"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/btnshape"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:fontFamily="sans-serif"
            android:textColorHint="@color/gray"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/simpleCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:buttonTint="@color/gray"
            android:checked="false"
            android:fontFamily="sans-serif"
            android:text="@string/termsCondition"
            android:textColor="@color/gray" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/linearBottom"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@drawable/btngradient"
            android:text="@string/signup"
            android:fontFamily="sans-serif"
            android:textColor="@color/white">
        </Button>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="left"
            android:textSize="14sp"
            android:id="@+id/tv_alreadyRegister"
            android:fontFamily="sans-serif"
            android:layout_marginTop="10dp"
            android:text="@string/alreadyRegister"
            android:textColor="@color/textColor"
            />
    </LinearLayout>
</RelativeLayout>