<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <View
        android:layout_width="50dp"
        android:layout_height="3dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/white_bg" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/additional_time"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="15dp"
        android:weightSum="3">

        <TextView
            android:id="@+id/txt2Hours"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="5dp"
            android:text="@string/two_hours"
            android:textSize="15sp"
            android:textColor="@color/white" />
        <TextView
            android:id="@+id/txt8Hours"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="15sp"
            android:paddingStart="5sp"
            android:text="@string/eight_hours"
            android:textColor="@color/white" />
        <TextView
            android:id="@+id/txt22Hours"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="5sp"
            android:text="@string/twentyFour_hours"
            android:textSize="15sp"
            android:paddingEnd="5sp"
            android:gravity="end"
            android:textColor="@color/white" />

    </LinearLayout>


    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="10"
        android:progress="0"
        android:progressDrawable="@drawable/custom_seekbar"
        android:thumb="@drawable/thumb"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp" />

    <Button
        android:id="@+id/txtPurchase"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/btngradient"
        android:gravity="center"
        android:fontFamily="sans-serif"
        android:text="@string/purchase_2_hours"
        android:textAllCaps="true"
        android:textColor="@color/white"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="Another time"
        android:fontFamily="sans-serif"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="15sp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="13sp"
        android:fontFamily="sans-serif"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="*List of prohibited software according to the Security Policy"
        android:textColor="@color/white"
        android:layout_marginBottom="30dp"/>


</LinearLayout>