<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".activity.SpeedTestActivity">

    <ImageView
        android:layout_width="@dimen/_153sdp"
        android:layout_height="@dimen/_79sdp"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:src="@drawable/logo" />


    <LinearLayout
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/circleshape"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/personwhite" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/next_in_queue"
        android:textColor="@color/gray" />

    <LinearLayout
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_40sdp"
        android:background="@drawable/circleshape"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="center"
                android:src="@drawable/wifi" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="center"
                android:text="0.0"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="center"
                android:text="@string/mbTS"
                android:textColor="@color/white" />

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/speed_test"
        android:textColor="@color/gray" />

    <Button
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        android:text="@string/back"
        android:id="@+id/btn_back_speed"
        android:layout_gravity="center"
        android:textColor="@color/gray"
        android:background="@drawable/btnshape"/>


</LinearLayout>