<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg_new"
    tools:context=".activity.ForgetPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearBottom"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <EditText
            android:id="@+id/et_emailForget"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="1dp"
            android:background="@drawable/btnshape"
            android:hint="@string/emailOrMobile"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:imeOptions="actionDone"
            android:textColorHint="@color/gray"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/linearBottom"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_resetPass"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@drawable/btngradient"
            android:text="@string/resetPass"
            android:fontFamily="sans-serif"
            android:textColor="@color/white">
        </Button>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="center"
            android:textSize="14sp"
            android:id="@+id/tv_termsAndCondition_forget"
            android:fontFamily="sans-serif"
            android:layout_marginTop="10dp"
            android:text="@string/termsAndC"
            android:textColor="@color/white"
            />
    </LinearLayout>
    <ProgressBar
        android:id="@+id/loadingForgot_progress_xml"
        style="?android:attr/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_centerInParent="true" />
</RelativeLayout>