<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundimage"
    tools:context=".fragments.ArcadeFragment">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.9"
        android:background="@color/background" />

    <TextView
        android:id="@+id/txtArcade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/arcade"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp" />

    <TextView
        android:id="@+id/txtArcadeMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtArcade"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/arcade_message"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp" />

    <View
        android:id="@+id/viewSeparator"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_below="@id/txtArcadeMessage"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/black" />

    <LinearLayout
        android:id="@+id/llReload"
        android:layout_below="@id/viewSeparator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:padding="@dimen/_15sdp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/_12sdp"
            android:layout_height="@dimen/_12sdp"
            android:src="@drawable/reload" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:fontFamily="sans-serif"
            android:text="@string/reload"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:textStyle="normal" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/llReload"
        android:id="@+id/rvArcade"
        />


</RelativeLayout>